--- a/cloud-config-repo/simple-service-dev.properties
+++ b/cloud-config-repo/simple-service-dev.properties
@@ -1,3 +1,3 @@
-mysqldb.datasource.url=jdbc\:mysql\://localhost\:3306/test?useUnicode\=true&characterEncoding\=utf-8
+mysqldb.datasource.url=jdbc\:mysql\://120.76.100.12\:3306/zht?useUnicode\=true&characterEncoding\=utf-8
 mysqldb.datasource.username=root
-mysqldb.datasource.password=123
+mysqldb.datasource.password=ydongj.com
