--- a/cloud-config-repo/cloud-config-dev.properties
+++ b/cloud-config-repo/cloud-config-dev.properties
@@ -1,3 +1,3 @@
-mysqldb.datasource.url=jdbc\:mysql\://120.76.100.12\:3306/zht?useUnicode\=true&characterEncoding\=utf-8
+mysqldb.datasource.url=jdbc\:mysql\://120.76.100.12\:3306/zht
 mysqldb.datasource.username=root
 mysqldb.datasource.password=ydongj.com
