--- a/cloud-config-server/src/main/resources/application.properties
+++ b/cloud-config-server/src/main/resources/application.properties
@@ -10,9 +10,17 @@ spring.application.name=cloud-config-server
 security.user.name=ydj
 security.user.password=ydj123
 
+encrypt.key=ydj
 encrypt.key-store.location=classpath:.keystore
 encrypt.key-store.alias=cloud-config-server
 encrypt.key-store.password=123456
 encrypt.key-store.secret=123456
 
-#$ curl localhost:8888/env
+# Spring RabbitMQ
+spring.rabbitmq.host=127.0.0.1
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=hakon
+spring.rabbitmq.password=123456
+spring.rabbitmq.virtual-host=/
+
+security.ignored=/monitor
