--- a/cloud-config-server/src/main/resources/application.properties
+++ b/cloud-config-server/src/main/resources/application.properties
@@ -8,7 +8,8 @@ eureka.client.serviceUrl.defaultZone=http\://localhost\:8000/eureka/
 spring.application.name=cloud-config-server
 
 security.user.name=ydj
-security.user.password=ydj123
+security.user.password=ydj
+security.ignored=/monitor
 
 encrypt.key=ydj
 encrypt.key-store.location=classpath:.keystore
@@ -23,4 +24,3 @@ spring.rabbitmq.username=hakon
 spring.rabbitmq.password=123456
 spring.rabbitmq.virtual-host=/
 
-security.ignored=/monitor
