--- a/cloud-simple-service/pom.xml
+++ b/cloud-simple-service/pom.xml
@@ -106,10 +106,10 @@
 			<artifactId>spring-cloud-starter-bus-amqp</artifactId>
 		</dependency>
         <!--自动推送-->
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-config-monitor</artifactId>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.springframework.cloud</groupId>-->
+            <!--<artifactId>spring-cloud-config-monitor</artifactId>-->
+        <!--</dependency>-->
 	</dependencies>
 	<build>
 		<plugins>
