--- a/cloud-config-repo/simple-service-dev.properties
+++ b/cloud-config-repo/simple-service-dev.properties
@@ -8,4 +8,4 @@ mysqldb.datasource.password={cipher}AQBRsixJd7b9wrUJk1Jv3gbev2HnK9rRX+4J3qiVhWVA
   qCSaMThsCuxfIqZNg4nETnICVUdBvp8=
 mysqldb.datasource.driverclassname=com.mysql.jdbc.Driver
 
-mysqldb.datasource.hello=123.
+mysqldb.datasource.hello=hi999
